ECS-78 bugfix edit instances table cell